add missing endpoints to swagger
